fix misaligned display of h2.pix styling

--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -217,11 +217,12 @@ h2.pix {
 
   span::before,
   span::after {
+    content: "";
     width: 23px;
     height: 19px;
     position: absolute;
     right: -40px;
-    top: 35%;
+    top: 50%;
     transform: translateY(-50%);
   }
 
