--- a/static/css/custom-svg.css
+++ b/static/css/custom-svg.css
@@ -70,5 +70,5 @@ article {
 
 h2.pix span::before,
 h2.pix span::after {
-    content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="%23BBB" width="23" height="19"><rect x="0" y="0" width="3" height="3" /><rect x="0" y="4" width="3" height="3" /><rect x="0" y="8" width="3" height="3" /><rect x="0" y="12" width="3" height="3" /><rect x="0" y="16" width="3" height="3" /><rect x="4" y="4" width="3" height="3" /><rect x="4" y="8" width="3" height="3" /><rect x="4" y="12" width="3" height="3" /><rect x="8" y="4" width="3" height="3" /><rect x="8" y="8" width="3" height="3" /><rect x="8" y="12" width="3" height="3" /><rect x="12" y="8" width="3" height="3" /><rect x="16" y="8" width="3" height="3" /><rect x="20" y="8" width="3" height="3" /></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="%23BBB" width="23" height="19"><rect x="0" y="0" width="3" height="3" /><rect x="0" y="4" width="3" height="3" /><rect x="0" y="8" width="3" height="3" /><rect x="0" y="12" width="3" height="3" /><rect x="0" y="16" width="3" height="3" /><rect x="4" y="4" width="3" height="3" /><rect x="4" y="8" width="3" height="3" /><rect x="4" y="12" width="3" height="3" /><rect x="8" y="4" width="3" height="3" /><rect x="8" y="8" width="3" height="3" /><rect x="8" y="12" width="3" height="3" /><rect x="12" y="8" width="3" height="3" /><rect x="16" y="8" width="3" height="3" /><rect x="20" y="8" width="3" height="3" /></svg>');
 }
